add a button on portfolio

--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,11 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
             </form>
+
+            <button type="button" class="btn btn-primary">Send</button>
       </div>
+
+   
 
 
       <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
